_source/stylesheets/layout/_header.scss
// -----------------------------------------------------------------------------
// This file contains all styles related to the header of the site/application.
// -----------------------------------------------------------------------------
/**
 * A region that contains mostly site-oriented content, rather than page-specific content.
 *
 * Site-oriented content typically includes things such as the logo or identity of the site sponsor, and site-specific search tool. A banner usually appears at the top of the page and typically spans the full width.
 *
 * Within any `document` or `application`, the author **SHOULD** mark no more than one element with the `banner` role.
 */
[role='banner'] {
}

.main-menu {
	max-width: span(10);

	margin: 0 auto;

	background-color: palette('white');

	outline: 1px solid;

	@include media('<desktop') {
		width: 0;

		.menu-controller:checked & {
			width: 90%;
		}
	}

	@include media ('>=10col') {
		position: relative;
		top: $line-height * 1em;

		z-index: layer('default');

		max-width: none;
		margin: 0 0 0 calc(50% - #{span(4) / 2});
	}
}

.main-menu > ul {
	display: table;

	max-width: span(12);

	margin: 0 auto 0 0;

	font-size: ms(-1);

	@include media('<desktop') {
		display: block;
	}
}

.main-menu > ul > li {
	display: table-cell;

	@include media('<desktop') {
		display: block;
	}
}

